@@ -26,16 +26,8 @@
 
 package org.mitre.mpf.test;
 
-import org.apache.camel.CamelContext;
-import org.apache.camel.Exchange;
-import org.apache.camel.impl.DefaultCamelContext;
-import org.apache.camel.impl.DefaultExchange;
-import org.apache.camel.impl.DefaultMessage;
-import org.junit.Assume;
-import org.junit.rules.TemporaryFolder;
-import org.mitre.mpf.wfm.util.PropertiesUtil;
-import org.mockito.ArgumentMatchers;
-import org.springframework.core.io.PathResource;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.Mockito.when;
 
 import java.io.IOException;
 import java.net.URI;
@@ -43,35 +35,71 @@ import java.net.URISyntaxException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.time.Duration;
+import java.time.Instant;
+import java.time.temporal.ChronoUnit;
+import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Map;
+import java.util.concurrent.ExecutionException;
+import java.util.concurrent.Future;
+import java.util.concurrent.TimeUnit;
+import java.util.concurrent.TimeoutException;
 import java.util.function.Predicate;
 
-import static org.mockito.Mockito.when;
+import org.apache.camel.Exchange;
+import org.apache.camel.impl.DefaultCamelContext;
+import org.apache.camel.impl.DefaultExchange;
+import org.assertj.core.api.Condition;
+import org.assertj.core.api.FutureAssert;
+import org.junit.Assume;
+import org.junit.rules.TemporaryFolder;
+import org.mitre.mpf.mvc.WebMvcConfig;
+import org.mitre.mpf.wfm.ValidatorConfig;
+import org.mitre.mpf.wfm.util.PropertiesUtil;
+import org.mockito.ArgumentMatcher;
+import org.mockito.ArgumentMatchers;
+import org.springframework.core.io.PathResource;
+import org.springframework.http.converter.HttpMessageConverter;
+import org.springframework.http.converter.ResourceHttpMessageConverter;
+import org.springframework.test.web.servlet.MockMvc;
+import org.springframework.test.web.servlet.setup.MockMvcBuilders;
+import org.springframework.validation.beanvalidation.LocalValidatorFactoryBean;
 
 public class TestUtil {
+
+    public static final Duration FUTURE_DURATION = Duration.ofMillis(15);
 
     private TestUtil() {
 
     }
 
     public static String nonBlank() {
-        return ArgumentMatchers.argThat(s -> s != null && !s.trim().isEmpty());
+        return describedArgThat(s -> s != null && !s.isBlank(), "nonBlank()");
     }
-
 
     public static <T, C extends Collection<T>> C collectionContaining(Predicate<T> matchPredicate) {
-        return ArgumentMatchers.argThat(c -> c.stream().anyMatch(matchPredicate));
+        return describedArgThat(
+                c -> c.stream().anyMatch(matchPredicate),
+                "anyMatch(%s)", matchPredicate);
     }
 
-    public static <T, C extends Collection<T>> C nonEmptyCollection() {
-        return ArgumentMatchers.argThat(c -> !c.isEmpty());
+
+    public static <T, C extends Collection<? extends T>> C nonEmptyCollection() {
+        return describedArgThat(c -> !c.isEmpty(), "nonEmptyCollection()");
     }
 
-    public static <K, V, M extends Map<K, V>> M nonEmptyMap() {
-        return ArgumentMatchers.argThat(m -> !m.isEmpty());
-    }
+    public static <T> T describedArgThat(Predicate<T> pred, String description, Object... args) {
+        return ArgumentMatchers.argThat(new ArgumentMatcher<>() {
 
+            public boolean matches(T argument) {
+                return pred.test(argument);
+            }
+
+            public String toString() {
+                return description.formatted(args);
+            }
+        });
+    }
 
 
     public static boolean almostEqual(double x, double y, double epsilon) {
@@ -120,11 +148,7 @@ public class TestUtil {
 
 
     public static Exchange createTestExchange() {
-        var context = new DefaultCamelContext();
-        var exchange = new DefaultExchange(context);
-        exchange.setIn(new DefaultMessage(context));
-        exchange.setOut(new DefaultMessage(context));
-        return exchange;
+        return new DefaultExchange(new DefaultCamelContext());
     }
 
     public static void initPipelineDataFiles(PropertiesUtil mockPropertiesUtil, TemporaryFolder temporaryFolder)
@@ -165,6 +189,57 @@ public class TestUtil {
         Assume.assumeTrue("Skipping this test because it requires Node Manager but it is disabled.",
                            nodeManagerEnabled());
     }
+
+    public static MockMvc initMockMvc(Object controller) {
+        var setup = MockMvcBuilders.standaloneSetup(controller);
+        var converters = new ArrayList<HttpMessageConverter<?>>();
+        converters.add(new ResourceHttpMessageConverter());
+        new WebMvcConfig().extendMessageConverters(converters);
+        setup.setMessageConverters(converters.toArray(HttpMessageConverter[]::new));
+        return setup.build();
+    }
+
+
+    private static Condition<Future<?>> doesNotCompleteWithin(Duration duration) {
+        return new Condition<>(
+            f -> {
+                try {
+                    f.get(duration.toNanos(), TimeUnit.NANOSECONDS);
+                    return false;
+                }
+                catch (TimeoutException e) {
+                    return true;
+                }
+                catch (ExecutionException e) {
+                    return false;
+                }
+                catch (InterruptedException e) {
+                    Thread.currentThread().interrupt();
+                    throw new IllegalStateException(e);
+                }
+            },
+            "does not complete within %s",
+            duration
+        );
+    }
+
+    private static <T> FutureAssert<T> assertDoesNotCompleteWithin(
+            Future<T> future, Duration duration) {
+        return assertThat(future).satisfies(doesNotCompleteWithin(duration));
+    }
+
+    public static <T> FutureAssert<T> assertNotDone(Future<T> future) {
+        return assertDoesNotCompleteWithin(future, FUTURE_DURATION);
+    }
+
+    public static boolean equalAfterTruncate(Instant x, Instant y) {
+        return x.truncatedTo(ChronoUnit.MILLIS).equals(y.truncatedTo(ChronoUnit.MILLIS));
+    }
+
+
+    public static LocalValidatorFactoryBean createValidator() {
+        var validator = new ValidatorConfig().localValidatorFactoryBean();
+        validator.afterPropertiesSet();
+        return validator;
+    }
 }
-
-
